--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>Lại là tao nè </h1>
     <p>tao nữa</p>
+    <h2>thêm h2</h2>
     <div class="container">
         <h1 class="h1">Todo <span>List</span></h1>
         <div class="input_div">
