--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h1 class="h1">Todo <span>List</span></h1>
+        <div class="logo"><img src="images/TODO.png" alt=""></div>
         <div class="input_div">
             <input type="text" class="input" id="nhap" placeholder="Nhập vào công việc cần làm ....">
             <button class="submit"><i class="fa fa-plus" style="font-size:36px"></i></button>
